# generate-cerfa-2561-scic

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: emetteur.yaml
data/: example.csv  test_steph_anna.csv
logs/: .gitkeep
output/: .gitkeep
scripts/: analyze_pdf.py  calibrate_positions.py  extract_text.py  find_positions.py
src/cerfa_generator/: __init__.py  cli.py  config.py  csv_parser.py  email_sender.py  models.py  pdf_generator.py
templates/: .gitkeep
